# ChangeLog for app-text/jabref
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/jabref/ChangeLog,v 1.72 2009/04/23 13:43:37 caster Exp $

*jabref-2.5_beta (23 Apr 2009)

  23 Apr 2009; Vlastimil Babka <caster@gentoo.org> -jabref-2.4.1.ebuild,
  jabref-2.4.2, +jabref-2.5_beta.ebuild:
  Version bump. Now with plugin manager and user installation in HOME, yay.
  Add mysql USE flag which pulls jdbc-mysql, also in 2.4.2. Fixes bug
  #252833.

  04 Apr 2009; Markus Meier <maekke@gentoo.org> jabref-2.4.2.ebuild:
  amd64/x86 stable, bug #263647

  29 Mar 2009; Petteri Räty <betelgeuse@gentoo.org> jabref-2.3.1.ebuild:
  Migrate to EAPI 2 in order to fix bug #239835.

  24 Mar 2009; Petteri Räty <betelgeuse@gentoo.org> jabref-2.3.1.ebuild:
  Add slot dep for antlr.

*jabref-2.4.2 (23 Dec 2008)

  23 Dec 2008; Vlastimil Babka <caster@gentoo.org> -jabref-2.3.ebuild,
  +jabref-2.4.2.ebuild:
  Version bump, bug #245207. No more bundling of jpfcodegen.

  12 Oct 2008; Vlastimil Babka <caster@gentoo.org> jabref-2.4.1.ebuild:
  Restore ~x86

*jabref-2.4.1 (11 Oct 2008)

  11 Oct 2008; Vlastimil Babka <caster@gentoo.org>
  +files/jabref-2.4-build.xml.patch, +jabref-2.4.1.ebuild:
  Version bump, bug #236505. Bundles jpfcodegen for now due to unavailable
  homepage. Had to drop keywords for new dep.

  02 May 2008; Christian Faulhammer <opfer@gentoo.org> jabref-2.3.1.ebuild:
  stable x86, bug 219635

  30 Apr 2008; Kenneth Prugh <ken69267@gentoo.org> jabref-2.3.1.ebuild:
  amd64 stable, bug #219635

  30 Apr 2008; nixnut <nixnut@gentoo.org> jabref-2.3.1.ebuild:
  Stable on ppc wrt bug 219635

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> jabref-2.3.ebuild,
  jabref-2.3.1.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

*jabref-2.3.1 (10 Jan 2008)

  10 Jan 2008; Vlastimil Babka <caster@gentoo.org> -jabref-2.2.ebuild,
  +jabref-2.3.1.ebuild:
  Version bump and version dump.
