@@ -5,6 +5,6 @@ DIST JabRef-2.4.2-src.tar.bz2 6903387 RMD160 200c98803948d3c9791f084d9d02655bc72
 DIST JabRef-2.5b-src.tar.bz2 7398732 RMD160 c6c515c8c76f6d7bd752ebfaa4b52ced94c2bc87 SHA1 4ea2cd55ca064de93db420ea25abb0c99f6a4845 SHA256 2263bb5ced8098aa31c7570f0cf6a8f407047dbbef9a57c7d419f3cf6b286fb9
 EBUILD jabref-2.3.1.ebuild 1775 RMD160 91a40180d3496809c8a1bd1484a41c7464ac704b SHA1 59850c0b911a2f685f540ae9ca8b4ae9449f2eff SHA256 2adecf9308ee6b7d7468b555a589e3d6927b3771387dd1316db79716eb59fcb3
 EBUILD jabref-2.4.2.ebuild 2217 RMD160 603b93a192fe8255c4ea8f003a5cc0ede50d8625 SHA1 696d1c1f98379e2a0cabdce1d51b0c1b0a88f0de SHA256 20a55dc3501f153c4a5d274cb7b881ad0073a3ee4814f7cbd3aa8368ed0dcf86
-EBUILD jabref-2.5_beta.ebuild 2201 RMD160 6af787957f59d0cdba0ea8ecbd522ac6755244b2 SHA1 c79b695017346f041e067f89f61b8b49df943302 SHA256 44eea99bea3f6ec1f9c95c47dec5c0a41a433131429b22b4abff6789995956f8
-MISC ChangeLog 10174 RMD160 96f0ab305b26a0a219837ff5f4c3676ed13405a3 SHA1 9bf57c969b102d7fc67cc8bffbd2cb23c8a98fbd SHA256 734216e9bc8500c0f65bad02cdd6907767deb3dacc9fd06feb6d0e463093525a
+EBUILD jabref-2.5_beta.ebuild 2201 RMD160 7ca19e9080c1f6b08410f89a9e2f9512321341bd SHA1 3b68fb458922fd2a48bedd4232f7c5041a082edc SHA256 8d9434d5cf47604e3cccc7e408de4ceacc78273c18105a29ef22056800009958
+MISC ChangeLog 10290 RMD160 90935369c24abd3a9879d977221e603a26165ed0 SHA1 5acc29119ed49179bb928d2f6e280b172e623ecd SHA256 9dc83c52879027fc1606153bee78837ac1376e3d1eeb5ecbc6c1f7aba7ea872c
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
